@@ -328,26 +328,6 @@ AC_ARG_ENABLE(interface, [  --disable-interface  disable network interface suppo
 	       *) AC_MSG_RESULT(yes); WITH_INTERFACE=1 ;;
 	       esac],
 	       [AC_MSG_RESULT(yes);  WITH_INTERFACE=1 ])
-if test "$WITH_INTERFACE"; then
-  AC_CHECK_HEADER(linux/if_packet.h,
-    AC_DEFINE(HAVE_LINUX_IF_PACKET_H),
-    [WITH_INTERFACE=;
-     AC_MSG_WARN([include file linux/if_packet.h not found, disabling interface])])
-fi
-if test "$WITH_INTERFACE"; then
-  AC_CHECK_HEADER(netinet/if_ether.h,
-    AC_DEFINE(HAVE_NETINET_IF_ETHER_H),
-    [WITH_INTERFACE=;
-     AC_MSG_WARN([include file netinet/if_ether.h not found, disabling interface])],
-     [AC_INCLUDES_DEFAULT
-     #if HAVE_NET_IF_H && HAVE_NETINET_IN_H
-     #include <net/if.h>
-     #include <netinet/in.h>
-     #endif])
-fi
-if test "$WITH_INTERFACE"; then
-   AC_DEFINE(WITH_INTERFACE)
-fi
 
 AC_MSG_CHECKING(whether to include TCP support)
 AC_ARG_ENABLE(tcp, [  --disable-tcp           disable TCP support],
@@ -833,6 +813,28 @@ fi
 #
 if test -n "$WITH_TUN"; then
   AC_DEFINE(WITH_TUN)
+fi
+
+if test "$WITH_INTERFACE"; then
+  AC_CHECK_HEADER(netinet/if_ether.h,
+    AC_DEFINE(HAVE_NETINET_IF_ETHER_H),
+    [WITH_INTERFACE=;
+     AC_MSG_WARN([include file netinet/if_ether.h not found, disabling interface])],
+     [AC_INCLUDES_DEFAULT
+     #if HAVE_NET_IF_H && HAVE_NETINET_IN_H
+     #include <net/if.h>
+     #include <netinet/in.h>
+     #endif])
+fi
+
+if test "$WITH_INTERFACE" || test "$WITH_TUN"; then
+  AC_CHECK_HEADER(linux/if_packet.h,
+    AC_DEFINE(HAVE_LINUX_IF_PACKET_H),
+    [WITH_INTERFACE=;
+     AC_MSG_WARN([include file linux/if_packet.h not found, disabling interface])])
+fi
+if test "$WITH_INTERFACE"; then
+   AC_DEFINE(WITH_INTERFACE)
 fi
 
 AC_MSG_CHECKING(whether to include system call tracing)
