@@ -33,7 +33,7 @@ const struct addrname addressnames[] = {
    { "ABSTRACT-RECVFROM",	&xioaddr_abstract_recvfrom },
    { "ABSTRACT-SENDTO",		&xioaddr_abstract_sendto },
 #endif /* defined(WITH_UNIX) && defined(WITH_ABSTRACT_UNIXSOCKET) */
-#if WITH_LISTEN
+#if WITH_LISTEN && WITH_FDNUM
    { "ACCEPT", 			&xioaddr_accept_fd },
    { "ACCEPT-FD", 		&xioaddr_accept_fd },
 #endif
